<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnbuscar"
                    android:layout_width="230dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="#DCEDE8"
                    android:text="@string/Buscar"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/id_persona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/Código" />

            <EditText
                android:id="@+id/cedula_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/Cedula" />

            <EditText
                android:id="@+id/nombre_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/Nombre" />

            <EditText
                android:id="@+id/apellido_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/Apellido" />

            <EditText
                android:id="@+id/sexo_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/Sexo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btncrear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Crear"
                    android:textSize="12sp"
                    app:cornerRadius="20dp"
                    android:backgroundTint="#66BB6A"/>

                <Button
                    android:id="@+id/btnlistar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/Listar"
                    android:textSize="12sp"
                    app:cornerRadius="20dp"
                    android:backgroundTint="#66BB6A"/>

                <Button
                    android:id="@+id/btnmodificar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/Modificar"
                    android:textSize="12sp"
                    app:cornerRadius="20dp"
                    android:backgroundTint="#66BB6A"/>

                <Button
                    android:id="@+id/btneliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/Eliminar"
                    android:textColorHint="@android:color/holo_blue_dark"
                    android:textSize="12sp"
                    app:cornerRadius="20dp"
                    android:backgroundTint="#66BB6A"/>
            </LinearLayout>

            <ListView
                android:id="@+id/listaPersona"
                android:layout_width="385dp"
                android:layout_height="369dp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>